# keyring

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.circleci/: config.yml
cmake/: keyringConfig.cmake.in
examples/print/: CMakeLists.txt  Makefile
examples/print/src/: main.cc
include/: keyring.h
include/keyring/: interface.h  linux_libsecret.h  mac_keychain.h
src/: linux_libsecret.cc  mac_keychain.cc  test_main.cc
